// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SectionHeader when user has budget below 0.5% 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#DCF0E5",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 14,
      "paddingVertical": 10,
      "shadowColor": "transparent",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <Text.Primary
    bold={true}
    darkGray={true}
    style={
      Object {
        "textTransform": "capitalize",
      }
    }
  >
    December 2020
  </Text.Primary>
  <Text.Secondary
    green={true}
    red={false}
  >
    0.1 % of budget
  </Text.Secondary>
</View>
`;

exports[`should render SectionHeader when user is below budget 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#DCF0E5",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 14,
      "paddingVertical": 10,
      "shadowColor": "transparent",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <Text.Primary
    bold={true}
    darkGray={true}
    style={
      Object {
        "textTransform": "capitalize",
      }
    }
  >
    December 2020
  </Text.Primary>
  <Text.Secondary
    green={true}
    red={false}
  >
    50 % of budget
  </Text.Secondary>
</View>
`;

exports[`should render SectionHeader when user is over budget 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#DCF0E5",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 14,
      "paddingVertical": 10,
      "shadowColor": "transparent",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <Text.Primary
    bold={true}
    darkGray={true}
    style={
      Object {
        "textTransform": "capitalize",
      }
    }
  >
    December 2020
  </Text.Primary>
  <Text.Secondary
    green={false}
    red={true}
  >
    150 % of budget
  </Text.Secondary>
</View>
`;
